--- a/s0824/index.html
+++ b/s0824/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>8월 24일 수업</title>
 </head>
 <body>
-    
+    <h1>HTML 데이터입력</h1>
+    <div>
+        <form>
+            <input type="button" id="btn" class="btn" name="nameOK" value="Disabled">
+        </form>
+
+        <button onclick="getDisabled()">Disabled사용불가</button>
+        <button onclick="getAbled()">Disabled사용가능</button>
+    </div>
+    <br>
+    <div>
+        <p>버튼 클릭후 , 콘솔에서 result 확인합니다 . </p>
+        <button onclick="getType()">Type 확인 [속성]</button>
+        <br>
+        <button onclick="getId()">Id 확인 [속성]</button>
+        <button onclick="getClass()">Class 확인 [속성]</button>
+        <br>
+        <button onclick="getName()">Name 확인 [속성]</button>
+        <button onclick="getValue()">Value 확인 [속성]</button>
+    </div>
+    <script src="./script/input_attr.js"></script>
 </body>
 </html>
