--- a/s0819/index.html
+++ b/s0819/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>8월 19일 수업</title>
 </head>
 <body>
-    
+    <!-- JS 데이터를 출력하는 방법 -->
+    <h1>HTML 출력문 작성</h1>
+    <p id="out"></p>
+    <script src="./script/output.js"></script>
 </body>
 </html>
